--- a/Glory-Ranking/Glory-Ranking/MainWindow.xaml
+++ b/Glory-Ranking/Glory-Ranking/MainWindow.xaml
@@ -1,73 +1,76 @@
-﻿<Window x:Class="Glory_Ranking.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Glory_Ranking"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:av="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="Glory_Ranking.MainWindow"
+        Title="MainWindow" Height="450" Width="800" MinWidth="600" MinHeight="450" Background="#FFEBEBEB">
     <Grid>
-        <TabControl TabStripPlacement="Left">
+        <TabControl TabStripPlacement="Left" Background="#FFEBEBEB" BorderBrush="#FFE9E9E9" Foreground="#FFEDEDED">
             <TabControl.Resources>
-                <Style TargetType="TabControl">
+                <Style TargetType="{x:Type TabControl}">
                     <Setter Property="FontSize" Value="20"/>
                     <Setter Property="FontWeight" Value="Bold"/>
                 </Style>
 
-                <Style TargetType="TabPanel">
-                    <Setter Property="HorizontalAlignment" Value="Center"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
+                <Style TargetType="{x:Type TabPanel}">
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
                 </Style>
 
-                <Style TargetType="TabItem">
-                    <Setter Property="Width" Value="200"/>
-                    <Setter Property="Height" Value="50"/>
+                <Style TargetType="{x:Type TabItem}">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    <Setter Property="Padding" Value="40, 15, 40, 15"/>
                 </Style>
             </TabControl.Resources>
 
-            <TabItem Header="Leaderboard" RenderTransformOrigin="0.5,0.5">
+            <TabItem x:Name="leaderboard" Header="Leaderboard" RenderTransformOrigin="0.5,0.5" BorderBrush="#FF6D6D6D">
                 <TabItem.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
                         <SkewTransform/>
                         <RotateTransform/>
-                        <TranslateTransform Y="-30"/>
+                        <TranslateTransform Y="40"/>
                     </TransformGroup>
                 </TabItem.RenderTransform>
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="White">
+                    <ListBox av:ItemsSource="{av:SampleData ItemCount=5}" Margin="167,83,219,83"/>
+                </Grid>
             </TabItem>
-            <TabItem Header="Edit Fighter" RenderTransformOrigin="0.5,0.5">
+
+            <TabItem x:Name="fighter" Header="Edit Fighter" RenderTransformOrigin="0.5,0.5" BorderBrush="#FF6D6D6D">
                 <TabItem.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
                         <SkewTransform/>
                         <RotateTransform/>
-                        <TranslateTransform Y="-5"/>
+                        <TranslateTransform Y="80"/>
                     </TransformGroup>
                 </TabItem.RenderTransform>
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="White"/>
             </TabItem>
-            <TabItem Header="Add Fight" RenderTransformOrigin="0.5,0.5">
+
+            <TabItem x:Name="fight" Header="Add Fight" RenderTransformOrigin="0.5,0.5" BorderBrush="#FF6D6D6D">
                 <TabItem.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
                         <SkewTransform/>
                         <RotateTransform/>
-                        <TranslateTransform Y="15"/>
+                        <TranslateTransform Y="120"/>
                     </TransformGroup>
                 </TabItem.RenderTransform>
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="White"/>
             </TabItem>
-            <TabItem Header="Edit json" RenderTransformOrigin="0.5,0.5">
+
+            <TabItem x:Name="json" Header="Edit JSON" RenderTransformOrigin="0.5,0.5" BorderBrush="#FF6D6D6D">
                 <TabItem.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
                         <SkewTransform/>
                         <RotateTransform/>
-                        <TranslateTransform Y="30"/>
+                        <TranslateTransform Y="160"/>
                     </TransformGroup>
                 </TabItem.RenderTransform>
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="White"/>
             </TabItem>
         </TabControl>
     </Grid>
