--- a/Glory-Ranking/Glory-Ranking/MainWindow.xaml
+++ b/Glory-Ranking/Glory-Ranking/MainWindow.xaml
@@ -33,7 +33,7 @@
                     </TransformGroup>
                 </TabItem.RenderTransform>
                 <Grid Background="White">
-                    <ListBox x:Name="leaderboardBox" av:ItemsSource="{av:SampleData ItemCount=5}" Margin="20,85,20,10" BorderBrush="Black"/>
+                    <ListBox x:Name="leaderboardBox" av:ItemsSource="{av:SampleData ItemCount=10}" Margin="20,85,20,10" BorderBrush="Black" FontWeight="Normal" FontSize="20"/>
                     <ComboBox x:Name="leaderboardDivision" HorizontalAlignment="Left" Margin="20,38,0,0" VerticalAlignment="Top" Width="277" BorderBrush="Black" RenderTransformOrigin="0.5,0.5" Text="Division" Foreground="Black" SelectionChanged="leaderboardDivision_SelectionChanged">
                         <ComboBox.Background>
                             <LinearGradientBrush EndPoint="0,1">
@@ -256,12 +256,19 @@
                     <Rectangle HorizontalAlignment="Left" Height="34" Margin="19,38,0,0" Stroke="Black" VerticalAlignment="Top" Width="278"/>
                     <Label Content="Add new fighter" HorizontalAlignment="Left" Margin="19,38,0,0" VerticalAlignment="Top" Height="34" Width="278" FontWeight="Bold" VerticalContentAlignment="Center" FontSize="18"/>
                     <TextBox x:Name="newFighterNameInput" HorizontalAlignment="Left" Margin="19,112,0,0" VerticalAlignment="Top" Width="278" Height="41" VerticalContentAlignment="Center" FontWeight="Normal" FontStyle="Italic" BorderBrush="Black" SelectionTextBrush="{x:Null}" Background="{x:Null}" TextChanged="newFighterNameInput_TextChanged"/>
-                    <Label x:Name="newFighterNameOverlay" Content="New fighter name..." HorizontalAlignment="Left" Margin="19,112,0,0" VerticalAlignment="Top" Width="278" FontWeight="Normal" FontStyle="Italic" IsEnabled="False" Panel.ZIndex="-1" VerticalContentAlignment="Center"/>
+                    <Label x:Name="newFighterNameOverlay" Content="New fighter name..." HorizontalAlignment="Left" Margin="19,112,0,0" VerticalAlignment="Top" Width="278" FontWeight="Normal" FontStyle="Italic" IsEnabled="False" Panel.ZIndex="-1" VerticalContentAlignment="Center" Background="{x:Null}"/>
                     <Button x:Name="submitNewFighterButton" Content="&gt;" HorizontalAlignment="Left" Margin="302,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.308,-0.071" Height="34" Width="34" FontSize="25" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="{x:Null}" BorderBrush="Black" Click="Button_Click" IsEnabled="False"/>
                     <TextBlock x:Name="fighterAddedInfoText" HorizontalAlignment="Left" Margin="19,153,0,0" VerticalAlignment="Top" Width="317" Height="23" FontSize="16" FontWeight="Light" FontStyle="Italic"/>
-                    <Rectangle HorizontalAlignment="Left" Height="34" Margin="19,176,0,0" Stroke="Black" VerticalAlignment="Top" Width="278"/>
-                    <Label Content="Add fight outcome" HorizontalAlignment="Left" Margin="19,176,0,0" VerticalAlignment="Top" Height="34" Width="278" FontWeight="Bold" VerticalContentAlignment="Center" FontSize="18"/>
-                    <Button x:Name="submitFightButton" Content="&gt;" HorizontalAlignment="Left" Margin="302,176,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.308,-0.071" Height="34" Width="34" FontSize="25" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="{x:Null}" BorderBrush="Black" Click="Button_Click" IsEnabled="False"/>
+                    <Rectangle HorizontalAlignment="Left" Height="34" Margin="19,170,0,0" Stroke="Black" VerticalAlignment="Top" Width="278"/>
+                    <Label Content="Add fight outcome" HorizontalAlignment="Left" Margin="19,170,0,0" VerticalAlignment="Top" Height="34" Width="278" FontWeight="Bold" VerticalContentAlignment="Center" FontSize="18"/>
+                    <Button x:Name="submitFightButton" Content="&gt;" HorizontalAlignment="Left" Margin="302,170,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.308,-0.071" Height="34" Width="34" FontSize="25" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="{x:Null}" BorderBrush="Black" Click="Button_Click" IsEnabled="False"/>
+                    <Label Content="Winner:" HorizontalAlignment="Left" Margin="19,202,0,0" VerticalAlignment="Top" Width="280" Height="30" Background="{x:Null}" Foreground="Lime" FontWeight="DemiBold" FontStyle="Italic" FontSize="18"/>
+                    <Label Content="Loser:" HorizontalAlignment="Left" Margin="19,277,0,0" VerticalAlignment="Top" Width="280" Height="30" Background="{x:Null}" FontWeight="DemiBold" FontStyle="Italic" FontSize="18" Foreground="Red"/>
+                    <TextBox x:Name="winnerTextInput" HorizontalAlignment="Left" Margin="19,232,0,0" VerticalAlignment="Top" Width="278" Height="45" FontWeight="Normal" Background="{x:Null}" BorderBrush="Black" SelectionTextBrush="{x:Null}" VerticalContentAlignment="Center" TextChanged="fightInput_TextChanged"/>
+                    <TextBox x:Name="loserTextInput" HorizontalAlignment="Left" Margin="21,307,0,0" VerticalAlignment="Top" Width="278" Height="45" FontWeight="Normal" Background="{x:Null}" BorderBrush="Black" SelectionTextBrush="{x:Null}" VerticalContentAlignment="Center" TextChanged="fightInput_TextChanged"/>
+                    <Label x:Name="winnerTextOverlay" Content="Winning fighter name..." HorizontalAlignment="Left" Margin="19,232,0,0" VerticalAlignment="Top" Height="45" Width="278" VerticalContentAlignment="Center" Background="{x:Null}" Foreground="#FF6D6D6D" FontWeight="Normal" FontStyle="Italic" IsEnabled="False" Panel.ZIndex="-1"/>
+                    <Label x:Name="loserTextOverlay" Content="Losing fighter name..." HorizontalAlignment="Left" Margin="21,307,0,0" VerticalAlignment="Top" Height="45" Width="276" VerticalContentAlignment="Center" Background="{x:Null}" Foreground="#FF6D6D6D" FontWeight="Normal" FontStyle="Italic" IsEnabled="False" Panel.ZIndex="-1"/>
+                    <Label x:Name="newFightOutputLabel" Content="" HorizontalAlignment="Left" Margin="20,352,0,0" VerticalAlignment="Top" Width="280" Height="40" Background="{x:Null}" FontWeight="Normal" FontStyle="Italic" FontSize="18" Foreground="DarkOrange"/>
                 </Grid>
             </TabItem>
 
